# wordlinator

./: .gitignore  Dockerfile  docker.sh  docker_nas.sh  pyproject.toml  serve.sh  wordle.db
.github/workflows/: last-pull.yml  update.yml
wordlinator/: utils.py
wordlinator/app/: __init__.py
wordlinator/db/: __init__.py  pg.py
wordlinator/sheets/: __init__.py
wordlinator/twitter/: __init__.py
wordlinator/utils/: __init__.py  scores.py  web.py
wordlinator/web/: __init__.py
wordlinator/web/assets/: style.css
