[tool.poetry]
name = "wordlinator"
version = "0.1.0"
description = "Bot to pull WordleGolf scores from twitter and record in GSheets"
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.49.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
rich = "^12.4.4"
python-dateutil = "^2.8.2"
httpx = "^0.23.0"
Authlib = "^1.0.1"
peewee = "^3.14.10"
dash = "^2.4.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
diskcache = "^5.4.0"
multiprocess = "^0.70.13"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"
flake8 = "^4.0.1"
isort = "^5.10.1"
ipython = "^8.4.0"

[tool.poetry.scripts]
wordlinator = "wordlinator.app:sync_main"
update = "wordlinator.app:sync_update"
show-user = "wordlinator.app:sync_show_user"
show-missing = "wordlinator.app:sync_show_missing"
tweet-missing = "wordlinator.app:sync_tweet_missing"
db-load = "wordlinator.app:load_db_scores"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
